Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.

2007-aug-27 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ all
	Display grid size in mils or mm in popup menu according to the current unit choice


2007-Aug-24 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ eeschema & pcbnew
  * Removed class EDA_BaseLineStruct, which brought no behavioral advantage, only data.
    Classes which were based on it got its data members added and their initializers.
  * Changed type of EDA_BaseStruct::m_StructType from int to KICAD_T which is an
    enum.  This makes debugging easier since gdb will show the name of the
    KICAD_T rather than simply a number.  Added NOT_USED = -1 to KICAD_T enum for
    3d which was using -1.
  * More beautification using latest uncrustify and the committed uncrustify.cfg
  

2007-Aug-24 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
================================================================================
+ pcbnew
    A new option has now been provided which permits Gerber files to be generated
    in which the contents of the Edges Pcb layer are not also included with the
    contents of each other layer.


2007-Aug-23 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ eeschema & pcbnew
  * Fixed MODULE::Visit() and BOARD::Vist() so they traverse certain lists
    only once and they are working nicely now.
  * You can test the GENERALCOLLECTOR::Scan() code by compiling with DEBUG=1 on
    the command line and enabling the stuff near line 124 in
    pcbnew/controle.cpp, then watch Show( std::cout ) show the selected items in
    xml format on your console. (launch pcbnew from command line.)
    @todo: