@@ -4,6 +4,16 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with 
 email address.
 
+
+2007-Aug-29 UPDATE   Dick Hollenbeck <dick@softplc.com>
+================================================================================
++ pcbnew
+    Started abstract class COLLECTORS_GUIDE.
+    Renamed classtrc.cpp to classtrc.cpp.notused
+    Changed some comments in class BOARD's header to english, starting clarify
+    linked list contents.
+
+    
 2007-aug-27 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
 ================================================================================
 + all
